welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:6: error: '<-' expected but ')' found.
  for (i<=1 to 4){faireV()}
                ^PictureMono1:7: error: illegal start of simple expression
} 
^